@@ -17,12 +17,12 @@ $stderr.reopen($stdout)
 error = ''
 
 srcdir = File.expand_path('..', File.dirname(__FILE__))
-`#{ruby} #{opt} #{srcdir}/sample/test.rb #{ARGV.join(' ')}`.each_line do |line|
+`#{ruby} #{opt} #{srcdir}/basictest/test.rb #{ARGV.join(' ')}`.each_line do |line|
   if line =~ /^end of test/
     print "\ntest succeeded\n"
     exit true
   end
-  error << line if %r:^(sample/test.rb|not): =~ line
+  error << line if %r:^(basictest/test.rb|not): =~ line
 end
 puts
 print error
